# termail

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  release.yml
src/: app.rs  config.rs  main.rs
src/ui/: context.rs  inputhandler.rs  keymap.rs  mod.rs
src/ui/activity/: mod.rs
src/ui/activity/main/: mailboxes.rs  maillist.rs  mod.rs  update.rs  view.rs
