[package]
name = "termail"
version = "0.1.0"
authors = ["tramhao <haoxinkui@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Terminal Mail client written in Rust. WIP"
repository = "https://github.com/tramhao/termail"
homepage = "https://github.com/tramhao/termail"
keywords = ["terminal", "tui","mail","client","email"]
categories = ["command-line-interface","command-line-utilities", ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "termail"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
byteorder = "1"
crossterm = "0.20"
dbus = {version="0.9",optional = true}
dbus-crossroads = { version="0.5",optional = true}
dirs-next = "2.0"
hex = "0.4"
humantime = "2.1"
if_chain = "1"
image = "0.23"
lazy_static = "1.4"
lewton = "0.10"
libaes = "0.6"
log = "0.4"
md5 = "0.7"
num-bigint = "0.2"
pinyin = "0.8"
rand = "0.8"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
textwrap = "0.14"
toml = "0.5"
tuirealm = "0.6" 
tui-realm-stdlib = "0.6"
tui-realm-treeview = "0.3"
ureq = "2.2"
viuer = "0.5"
ytd-rs = "0.1"
wildmatch = "2.1"
walkdir = "2"

[features]
default = []
# left for debug
# default = ["mpris","cover"]
# mpris = ["dbus","dbus-crossroads"]
# cover = []

[dev-dependencies]
pretty_assertions = "0.7"

[profile.release]
