[package]
name = "termail"
version = "0.1.0"
authors = ["tramhao <haoxinkui@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Terminal Mail client written in Rust. WIP"
repository = "https://github.com/tramhao/termail"
homepage = "https://github.com/tramhao/termail"
keywords = ["terminal", "tui","mail","client","email"]
categories = ["command-line-interface","command-line-utilities", ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "termail"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.20"
dirs-next = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1"
toml = "0.5"
tuirealm = "0.6" 
tui-realm-stdlib = "0.6"
tui-realm-treeview = "0.3"

[features]
default = []

[dev-dependencies]
pretty_assertions = "0.7"

[profile.release]
